--- a/TODO
+++ b/TODO
@@ -2,7 +2,6 @@
    aliases for non-MIT hostnames.
  * Check stella info with PyMoira before sending mail for *.mit.edu
    * Package PyMoira into an rpm and get installed on scripts servers
-     * Package libmoira into an rpm and get installed on scripts servers
  * Deal with the new vhost reification system.
  * Semi-automatic mode:
      We have an admin queue.  When a *.mit.edu vhost is requested, an
@@ -10,8 +9,13 @@
      team member can click a button to send it, or edit it in place.
      A cron job periodically resolves hostnames where the email's been
      sent and emails the original user when the vhost is active.
+   * Zephyr -c scripts when a new queue entry appears, and allow
+     auth'd zephyrs from people on scripts-team to approve them
+     via a zephyrbot.
    * I want to use mail scripts to parse jweiss's responses for 
      "done mod DNS", but this doesn't actually do anything useful.
      Though possibly we do want jweiss's responses to go to the pony
      admin queue and not RT.
+   * Perodically monitor DNS and notify users (and update the admin queue)
+     when their hostnames are live.
  * On error, go back where you were instead of punting to /index
