--- a/TODO
+++ b/TODO
@@ -4,6 +4,7 @@
    * This may require an ACI change.
  * Allow vhosts to be deleted if you confirm 17 times.
    * This will require an ACI change.
+ * Ask for a description when requesting hostnames, as a social factor.
  * Check stella info with PyMoira before sending mail for *.mit.edu
    * Package PyMoira into an rpm and get installed on scripts servers
  * Semi-automatic mode:
