--- a/README
+++ b/README
@@ -19,6 +19,21 @@ Pony will try to use your username+scripts-pony database on
 sql.mit.edu.  Go to sql.mit.edu and create this database, and
 be sure the login info in your ~/.my.conf is accurate.
 
+=== Mail and Cron ===
+
+To correctly process incoming mail, you need to be signed up for
+mail_scripts and Pony needs the following in ~/mail_scripts/procmailrc:
+
+:0w
+* ^Delivered-To:.*pony\+.*@.*
+| /mit/locker/Scripts/turbogears/ScriptsPony/handle_mail.py
+
+To periodically check DNS automatically for tickets blocking on DNS,
+you need to be signed up for cron_scripts and load a crontab that
+contains:
+
+* * * * 2,17,32,49 /mit/locker/Scripts/turbogears/ScriptsPony/check_dns.py
+
 === Authentication and Authorization ===
 
 Scripts Pony authenticates with ~/Private/scripts-pony.keytab,
