--- a/TODO
+++ b/TODO
@@ -1,9 +1,9 @@
- * Display aliases, and figure out what the right logic is for adding
+ * Figure out what the right logic is for adding default
    aliases for non-MIT hostnames.
- * Allow aliases to be manually created and removed.
-   * This may require an ACI change.
  * Allow vhosts to be deleted if you confirm 17 times.
    * This will require an ACI change.
+ * Allow aliases to be manually removed.
+   * This may require an ACI change.
  * Ask for a description when requesting hostnames, as a social factor.
  * Check stella info with PyMoira before sending mail for *.mit.edu
    * Package PyMoira into an rpm and get installed on scripts servers
@@ -14,6 +14,7 @@
  * Semi-automatic mode:
    * allow auth'd zephyrs from people on scripts-team to approve them
      via a zephyrbot.
+     * Get PyZephyr working/packaged on scripts.
    * I want to parse jweiss's responses for 
      "done mod DNS", and raise a flag if it looks like they contain actual 
      content.
