More TODO items.

--- a/TODO
+++ b/TODO
@@ -20,7 +20,7 @@
    * Customizable templates for outgoing mail
  * On error, go back where you were instead of punting to /index
  * Deal with the new vhost reification system, if it starts existing.
- * Let people on scripts-team request vhosts on lockers they don't
-   control, to make dealing with emails at scripts@ easier.  Put up an
-   obvious warning/make them confirm to make sure they don't do so
-   accidently, and make these lockers not get remembered in the locker list.
+ * Possibly give scripts-team more ability to look at/edit arbitrary lockers' 
+    vhosts via Pony
+ * Let scripts-team members specify the RT ID manually when sudoing, to avoid 
+   creating a new ticket.
