--- a/TODO
+++ b/TODO
@@ -24,3 +24,5 @@
     vhosts via Pony
  * Let scripts-team members specify the RT ID manually when sudoing, to avoid 
    creating a new ticket.
+ * For non-global Pony installs, zephyr errors somewhere useful instead of 
+   logging.
